--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,27 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=crosstoolchain/device-tree-comp
 
 Package: device-tree-compiler
 Architecture: any
-Depends: ${shlibs:Depends}
-Description: OpenFirmware Device Tree Compiler for Flat Device Trees
- This tool compiles device-tree descriptions for booting PowerPC
- kernels on embedded systems without OpenFirmware.
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: Device Tree Compiler for Flat Device Trees
+ Device Tree Compiler, dtc, takes as input a device-tree in
+ a given format and outputs a device-tree in another format
+ for booting kernels on embedded systems.
+ .
+ Typically, the input format is "dts", a human readable source
+ format, and creates a "dtb", or binary format as output.
+
+Package: libfdt1
+Architecture: any
+Section: libs
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: Flat Device Trees manipulation library
+ This is a library containing functions for manipulating Flat Device Trees.
+
+Package: libfdt-dev
+Architecture: any
+Section: libdevel
+Depends: libfdt1 (= ${binary:Version}), ${misc:Depends}
+Description: Flat Device Trees manipulation library - development files
+ This is a library containing functions for manipulating Flat Device Trees.
+ .
+ This package contains the files needed for development against libfdt.
